[package]
name = "droppher"
version = "0.4.0"
edition = "2021"

[dependencies]
notify-rust = "4"
dialog = "0.3"
messages = "0.3.1"
tokio = { version = "1", features = ["full"] }
regex = "1.10.4"
json = "0.12.4"
reqwest = { version = "0.12", features = ["json"] }

[target.'cfg(windows)'.dependencies]
win_dialog = "1.0.0"